board: PR #81 arc entry + LATEST_STATE
Discharges the merged-PR obligation for #81 at merge time, not as a backfill:
the Panama x Valhalla framing, the RangeOutOfBounds fix and its falsifier, the
409/183 gate results, the flattening cliff reproducing on JDK 28 with RowRange
and Row on the wrong side, the two allocation measurements that got worse, the
lab re-scope and its removed confound, and the JMH numbers still owed.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HScwwezRdMxFfTs3WLG19d